# inkdrop

./: .gitignore  Cargo.toml  LICENSE  README.md  app.js  app_bg.wasm  index.html  worker.js  worker_bg.wasm
cli/: Cargo.toml
cli/src/: main.rs
gcode_converter/: Cargo.toml
gcode_converter/src/: main.rs
lib/: Cargo.toml
lib/src/: color.rs  gcode.rs  lib.rs  point.rs  svg.rs  tsp.rs  voronoi.rs
lib/templates/: template.gcode
src/: main.rs  point.rs  tsp.rs  voronoi.rs
ui/: Cargo.toml  meson.build  meson_options.txt
ui/build-aux/: net.bloerg.inkdrop.Devel.json
ui/data/: net.bloerg.inkdrop.desktop.in.in  net.bloerg.inkdrop.gschema.xml.in  net.bloerg.inkdrop.metainfo.xml.in.in  resources.gresource.xml
ui/data/resources/: style.css
ui/data/resources/ui/: window.ui
ui/po/: POTFILES.in
ui/src/: application.rs  main.rs  window.rs
web/: Cargo.toml  Makefile
web/src/: lib.rs  worker.rs
web/static/: index.html  style.css
