[package]
name = "inkdrop-cli"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

[[bin]]
name = "inkdrop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
image = { version = "0", default-features = false, features = ["png", "jpeg"] }
inkdrop = { path = "../lib", features = ["svg"] }
log = "0"
env_logger = "0"
rayon = "1"
structopt = { version = "0", default-features = false }
serde_json = "1.0.107"
