[package]
name = "gcode-converter"
version = "0.1.0"
authors = ["Philipp Bender"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
inkdrop = { path = "../lib", features = ["use-svg"] }
log = "0"
env_logger = "0"
structopt = { version = "0", default-features = false }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
