[package]
name = "gcode-converter"
version = "0.1.0"
authors = ["Philipp Bender"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
inkdrop = { path = "../lib", features = ["gcode", "svg"] }
log = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { workspace = true }
structopt = { workspace = true }
