[package]
name = "inkdrop"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
image = { version = "0", default-features = false, features = ["png", "jpeg"] }
log = "0"
rand = "0"
voronator = "0"
svg = { version = "0", optional = true }
serde = { version = "1.0.186", features = ["derive"] }
askama = { version = "0.12.0", optional = true }

[features]
gcode = ["askama"]
svg = ["dep:svg"]
