[package]
name = "inkdrop-ui"
version = "0.1.0"
authors = ["Matthias Vogelgesang <matthias.vogelgesang@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
log = "0.4"
image = { version = "0", default-features = false, features = ["png", "jpeg"] }
inkdrop = { path = "../lib", features = ["use-svg"] }
pretty_env_logger = "0.4"
gettext-rs = { version = "0.6", features = ["gettext-system"] }
gtk-macros = "0.2"
once_cell = "1.5"

[dependencies.gtk]
version = "0"
package = "gtk4"
