[package]
name = "inkdrop-ui"
version = "0.1.0"
authors = ["Matthias Vogelgesang <matthias.vogelgesang@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
adw = { package = "libadwaita", git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs" }
log = "0.4"
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs" }
image = { version = "0", default-features = false, features = ["png", "jpeg"] }
inkdrop = { path = "../lib", features = ["use-svg"] }
pretty_env_logger = "0.4"
gettext-rs = { version = "0.6", features = ["gettext-system"] }
gtk-macros = "0.2"
once_cell = "1.5"
