[package]
name = "web"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2018"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
anyhow = "1"
image = { version = "0", default-features = false, features = ["png", "jpeg"] }
inkdrop = { path = "../lib" }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0" }
yew = "0"

# Not a direct dependency but we need to enable js to make inkdrop compile for
# wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["js"] }
